--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Matheus Leite - Atendimento Psicológico Online</title>
 </head>
 <body>
-    
+    <nav>
+        <ul class="nav-list">
+            <li><a href="#">CONTATOS</a></li>
+            <li><a href="#">COMO FUNCIONA</a></li>
+            <li><a href="#">SOBRE MIM</a></li>
+            <li><a href="#">FAQ</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section class="hero-section"></section>
+        <section class="sobre"></section>
+        <section class="como-funciona"></section>
+        <section class="topicos"></section>
+        <section class="feedback"></section>
+        <section class="faq"></section>
+        <section class="contatos"></section>
+    </main>
+    <footer></footer>
 </body>
 </html>
