--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
         </ul>
     </nav>
     <main>
-        <section class="hero-section"></section>
+        <section class="hero-section">
+            <div class="hero-text">
+                <h1>Matheus Leite <br> Atendimento Psicológico</h1>
+                <p>Atendimento psicológico especializado do conforto de sua casa!</p>
+                <button>Marque uma consulta!</button>
+            </div>
+            <div class="hero-img"> <img src="/imgs/Hero_-_Images-removebg-preview (1).png" alt="Uma mulher sorri enquanto mexe no computador."> </div>
+        </section>
         <section class="sobre"></section>
         <section class="como-funciona"></section>
         <section class="topicos"></section>
