Added Sobre Section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="nav-list">
             <li><a href="#">CONTATOS</a></li>
             <li><a href="#">COMO FUNCIONA</a></li>
-            <li><a href="#">SOBRE MIM</a></li>
+            <li><a href="#sobre">SOBRE MIM</a></li>
             <li><a href="#">FAQ</a></li>
         </ul>
     </nav>
@@ -25,7 +25,18 @@
             </div>
             <div class="hero-img"> <img src="/imgs/Hero_-_Images-removebg-preview (1).png" alt="Uma mulher sorri enquanto mexe no computador."> </div>
         </section>
-        <section class="sobre"></section>
+
+        <section class="sobre" id="sobre">
+            <div class="sobre-img">  <img src="/imgs/MATHEUS_LEITE.jpg" alt=""> </div>
+            <div class="sobre-text"> 
+                <h2>quem é matheus leite</h2> 
+                <p>Olá! Meu nome é <strong>Matheus Leite</strong>, tenho 25 anos e sou <strong>psicólogo clínico - CRP 11/19218 - graduado pela Universidade Federal do Ceará (UFC)</strong>. Ao longo da minha trajetória acadêmica, tive contato mais próximo com estudos e com atividades de extensão nos temas de: <strong>combate e prevenção ao suicídio</strong>, <strong>combate a diferentes formas de violências estruturais</strong>, <strong>desenvolvimento de relações interpessoais</strong>, <strong>promoção de saúde mental entre jovens das periferias de Fortaleza (CE)</strong>, entre outros. </p>
+                <p>No entanto, minhas áreas de estudo favoritas são sobre <strong>gênero e sexualidade</strong>, além da perspectiva de uma psicologia crítica e engajada com pautas sociais. Nesse sentido, ainda na faculdade, participei da condução de um podcast sobre diversos temas pautados pela Psicologia Social, e de um grupo de escuta a jovens LGBTQIAP+.</p>
+                <p>Além disso, possuo experiência de um ano e meio como estagiário em atendimentos clínicos, tanto em plantão psicológico quanto na modalidade de psicoterapia de longo prazo, e um ano de atendimentos já como profissional formado. </p>
+                <p><strong>Acredito numa clínica baseada no desenvolvimento de uma relação empática e de aceitação incondicional entre terapeuta e cliente</strong>, o que vem da <strong>Abordagem Centrada na Pessoa</strong> que utilizo na prática terapêutica, assim como valorizo a promoção dos Direitos Humanos e da saúde mental com atenção aos recortes de gênero, raça e sexualidade.</p> 
+            </div>
+        </section>
+
         <section class="como-funciona"></section>
         <section class="topicos"></section>
         <section class="feedback"></section>
