Added browser details

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
         <section class="hero-section">
             <div class="hero-text">
-                <h1>Matheus Leite <br> Atendimento Psicológico</h1>
+                <h1> <span id="nome-titulo">Matheus Leite</span> <br> Atendimento Psicológico</h1>
                 <p>Atendimento psicológico especializado do conforto de sua casa!</p>
                 <button>Marque uma consulta!</button>
             </div>
