--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <ul class="nav-list">
             <li><a href="#">CONTATOS</a></li>
-            <li><a href="#">COMO FUNCIONA</a></li>
+            <li><a href="#como-funciona">COMO FUNCIONA</a></li>
             <li><a href="#sobre">SOBRE MIM</a></li>
             <li><a href="#">FAQ</a></li>
         </ul>
@@ -27,7 +27,7 @@
         </section>
 
         <section class="sobre" id="sobre">
-            <div class="sobre-img">  <img src="/imgs/MATHEUS_LEITE.jpg" alt=""> </div>
+            <div class="sobre-img">  <img src="/imgs/MatheusLeiteProfile.jpg" alt="Descrição física de Matheus Leite: Homem, jovem, cabelo ondulado comprido até o pescoço, barba cheia, sorriso no rosto. Ele veste uma camisa de botão azul escura com a manga dobrada nos ante braços. Ele tem os braços cruzados em frente seu peito. Em seu braço direito é possível ver uma tatuagem de The Last of Us."> </div>
             <div class="sobre-text"> 
                 <h2>quem é matheus leite</h2> 
                 <p>Olá! Meu nome é <strong>Matheus Leite</strong>, tenho 25 anos e sou <strong>psicólogo clínico - CRP 11/19218 - graduado pela Universidade Federal do Ceará (UFC)</strong>. Ao longo da minha trajetória acadêmica, tive contato mais próximo com estudos e com atividades de extensão nos temas de: <strong>combate e prevenção ao suicídio</strong>, <strong>combate a diferentes formas de violências estruturais</strong>, <strong>desenvolvimento de relações interpessoais</strong>, <strong>promoção de saúde mental entre jovens das periferias de Fortaleza (CE)</strong>, entre outros. </p>
@@ -37,7 +37,16 @@
             </div>
         </section>
 
-        <section class="como-funciona"></section>
+        <section class="como-funciona" id="como-funciona">
+            <div class="cf-text">
+                <h2>como funciona</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet. Donec quis rutrum felis, sed interdum sem. Curabitur eu ante vitae augue tempor consectetur. Sed tristique congue metus. Vivamus ex est, porta sit amet leo sed, euismod faucibus risus. Vivamus ut risus at sem venenatis porta. Sed pharetraconsectetur luctus eu et turpis. Nam vehicula hendrerit justo eu accumsan.</p>
+            </div>
+            <div class="cf-ilustracao">
+                <img src="/imgs/chatting.png" alt="Uma tela de uma telefone onde, dentro dela, duas pessoas conversam.">
+            </div>
+        </section>
+
         <section class="topicos"></section>
         <section class="feedback"></section>
         <section class="faq"></section>
