Added Topicos Trabalhados section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,31 @@
             </div>
         </section>
 
-        <section class="topicos"></section>
+        <section class="topicos-trabalhados">
+            <div>
+                <h2>tópicos trabalhados</h2>
+                <p>É importante ressaltar que os mais diversos assuntos podem ser tratados na construção da relação de confiança e de <br>vínculo da terapia, desde os mais corriqueiros até a experiência particular com um psicodiagnóstico, por exemplo.</p>
+                <p><strong>Alguns dos tópicos que podem ser trabalhados na terapia: </strong></p>
+                <ul>
+                    <li>acompanhamento pessoal</li>
+                    <li>ansiedade</li>
+                    <li>conflitos amorosos</li>
+                    <li>conflitos familiares</li>
+                    <li>depressão</li>
+                    <li>relacionamento afetivos</li>
+                    <li>desenvolvimento pessoal</li>
+                    <li>estresse</li>
+                    <li>morte e luto</li>
+                    <li>parentalidade</li>
+                    <li>saúde mental</li>
+                    <li>suicídio</li>
+                    <li>isolamento social</li>
+                    <li>sexualidade</li>
+                    <li>identidade de gênero</li>
+                </ul>
+            </div>
+        </section>
+        
         <section class="feedback"></section>
         <section class="faq"></section>
         <section class="contatos"></section>
