Added Feedback section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/imgs/ML_Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,500,1,0" />
     <title>Matheus Leite - Atendimento Psicológico Online</title>
 </head>
 <body>
@@ -73,7 +74,32 @@
             </div>
         </section>
         
-        <section class="feedback"></section>
+        <section class="feedback">
+            <h2>feedback</h2>
+            <div class="card-container">
+                <div class="card">
+                    <span class="material-symbols-outlined">person</span>
+                    <h3 class="nome">Pessoa Fulana</h3>
+                    <p class="review">Aliquam et felis sit amet enim gravida semper. Etiam volutpat urna in rutrum lacinia. Suspendisse potenti.</p>
+                </div>
+                <div class="card">
+                    <span class="material-symbols-outlined">person</span>
+                    <h3 class="nome">Pessoa Fulana</h3>
+                    <p class="review">Aliquam et felis sit amet enim gravida semper. Etiam volutpat urna in rutrum lacinia. Suspendisse potenti.</p>
+                </div>
+                <div class="card">
+                    <span class="material-symbols-outlined">person</span>
+                    <h3 class="nome">Pessoa Fulana</h3>
+                    <p class="review">Aliquam et felis sit amet enim gravida semper. Etiam volutpat urna in rutrum lacinia. Suspendisse potenti.</p>
+                </div>
+                <div class="card">
+                    <span class="material-symbols-outlined">person</span>
+                    <h3 class="nome">Pessoa Fulana</h3>
+                    <p class="review">Aliquam et felis sit amet enim gravida semper. Etiam volutpat urna in rutrum lacinia. Suspendisse potenti.</p>
+                </div>
+            </div>
+        </section>
+
         <section class="faq"></section>
         <section class="contatos"></section>
     </main>
