Added FAQ section no JS

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href="#">CONTATOS</a></li>
             <li><a href="#como-funciona">COMO FUNCIONA</a></li>
             <li><a href="#sobre">SOBRE MIM</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li><a href="#faq">FAQ</a></li>
         </ul>
     </nav>
     <main>
@@ -100,7 +100,31 @@
             </div>
         </section>
 
-        <section class="faq"></section>
+        <section class="faq" id="faq">
+            <h2>perguntas frequêntes</h2>
+            <ul class="perguntas-container">
+
+                <li class="pergunta">
+                    <div class="linha-pergunta">
+                        <h3 class="texto-pergunta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet.</h3>
+                        <i class="material-symbols-outlined more">expand_more</i>
+                        <i class="material-symbols-outlined less">expand_less</i>
+                    </div>
+                    <p class="texto-resposta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet. Donec quis rutrum felis, sed interdum sem. Curabitur eu ante vitae augue tempor consectetur. Sed tristique congue metus. Vivamus ex est, porta sit amet leo sed, euismod faucibus risus. Vivamus ut risus at sem venenatis porta. Sed pharetraconsectetur luctus eu et turpis. Nam vehicula hendrerit justo eu accumsan.</p>
+                </li>
+
+                <li class="pergunta">
+                    <div class="linha-pergunta">
+                        <h3 class="texto-pergunta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet.</h3>
+                        <i class="material-symbols-outlined more">expand_more</i>
+                        <i class="material-symbols-outlined less">expand_less</i>
+                    </div>
+                    <p class="texto-resposta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet. Donec quis rutrum felis, sed interdum sem. Curabitur eu ante vitae augue tempor consectetur. Sed tristique congue metus. Vivamus ex est, porta sit amet leo sed, euismod faucibus risus. Vivamus ut risus at sem venenatis porta. Sed pharetraconsectetur luctus eu et turpis. Nam vehicula hendrerit justo eu accumsan.</p>
+                </li>
+            </ul>
+            
+        </section>
+
         <section class="contatos"></section>
     </main>
     <footer></footer>
