--- a/index.html
+++ b/index.html
@@ -102,26 +102,23 @@
 
         <section class="faq" id="faq">
             <h2>perguntas frequêntes</h2>
-            <ul class="perguntas-container">
-
-                <li class="pergunta">
-                    <div class="linha-pergunta">
-                        <h3 class="texto-pergunta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet.</h3>
-                        <i class="material-symbols-outlined more">expand_more</i>
-                        <i class="material-symbols-outlined less">expand_less</i>
-                    </div>
+            <div class="perguntas-container">
+                <details class="pergunta">
+                    <summary class="texto-pergunta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet.</summary>
                     <p class="texto-resposta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet. Donec quis rutrum felis, sed interdum sem. Curabitur eu ante vitae augue tempor consectetur. Sed tristique congue metus. Vivamus ex est, porta sit amet leo sed, euismod faucibus risus. Vivamus ut risus at sem venenatis porta. Sed pharetraconsectetur luctus eu et turpis. Nam vehicula hendrerit justo eu accumsan.</p>
-                </li>
+                </details>
 
-                <li class="pergunta">
-                    <div class="linha-pergunta">
-                        <h3 class="texto-pergunta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet.</h3>
-                        <i class="material-symbols-outlined more">expand_more</i>
-                        <i class="material-symbols-outlined less">expand_less</i>
-                    </div>
+                <details class="pergunta">
+                    <summary class="texto-pergunta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet.</summary>
                     <p class="texto-resposta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet. Donec quis rutrum felis, sed interdum sem. Curabitur eu ante vitae augue tempor consectetur. Sed tristique congue metus. Vivamus ex est, porta sit amet leo sed, euismod faucibus risus. Vivamus ut risus at sem venenatis porta. Sed pharetraconsectetur luctus eu et turpis. Nam vehicula hendrerit justo eu accumsan.</p>
-                </li>
-            </ul>
+                </details>
+
+                <details class="pergunta">
+                    <summary class="texto-pergunta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet.</summary>
+                    <p class="texto-resposta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet. Donec quis rutrum felis, sed interdum sem. Curabitur eu ante vitae augue tempor consectetur. Sed tristique congue metus. Vivamus ex est, porta sit amet leo sed, euismod faucibus risus. Vivamus ut risus at sem venenatis porta. Sed pharetraconsectetur luctus eu et turpis. Nam vehicula hendrerit justo eu accumsan.</p>
+                </details>
+
+            </div>
             
         </section>
 
