--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
     <main>
-        <section class="hero-section">
+        <section class="hero-section" id="home">
             <div class="hero-text">
                 <h1> <span id="nome-titulo">Matheus Leite</span> <br> Atendimento Psicológico</h1>
                 <p>Atendimento psicológico especializado do conforto de sua casa!</p>
@@ -49,7 +49,7 @@
             </div>
         </section>
 
-        <section class="topicos-trabalhados">
+        <section class="topicos-trabalhados" id="topicos-trabalhados">
             <div>
                 <h2>tópicos trabalhados</h2>
                 <p>É importante ressaltar que os mais diversos assuntos podem ser tratados na construção da relação de confiança e de <br>vínculo da terapia, desde os mais corriqueiros até a experiência particular com um psicodiagnóstico, por exemplo.</p>
@@ -74,7 +74,7 @@
             </div>
         </section>
         
-        <section class="feedback">
+        <section class="feedback" id="feedback">
             <h2>feedback</h2>
             <div class="card-container">
                 <div class="card">
@@ -170,8 +170,35 @@
                 </div>
             </div>
         </section>
-        
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <div class="mapa">
+                <h4>Mapa do Site</h4>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#sobre">Sobre</a></li>
+                    <li><a href="#como-funciona">Como funciona</a></li>
+                    <li><a href="#topicos-trabalhados">Tópicos trabalhados</a></li>
+                    <li><a href="#feedback">Feedback</a></li>
+                    <li><a href="#faq">FAQ</a></li>
+                    <li><a href="#contatos">Contatos</a></li>
+                </ul>
+            </div>
+            <div class="links">
+                <h4>Meios de Contato</h4>
+                <ul>
+                    <li>Telefone: (85) 9 9901-6122</li>
+                    <li>Instagram: @matheuslb.psi</li>
+                    <li>E-Mail: matheuslb.psi@gmail.com</li>
+                </ul>
+            </div>
+            <div class="aviso">
+                <h4>ATENÇÃO:</h4>
+                <p>Este site não oferece tratamento ou aconselhamento imediato para pessoas em crise suicida.<br> Em caso de crise, ligue para 188 (CVV) ou acesse o site <a href="https://www.cvv.org.br" target="_blank">www.cvv.org.br</a>. <br>Em caso de emergência, procure atendimento em um hospital mais próximo.</p>
+            </div>
+        </div>
+        <p>©2023 - Desenvolvido por <a href="https://www.linkedin.com/in/yohans-nascimento/" target="_blank">@Yohans.Dev</a></p>
+    </footer>
 </body>
 </html>
