--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
                 <p>Este site não oferece tratamento ou aconselhamento imediato para pessoas em crise suicida.<br> Em caso de crise, ligue para 188 (CVV) ou acesse o site <a href="https://www.cvv.org.br" target="_blank">www.cvv.org.br</a>. <br>Em caso de emergência, procure atendimento em um hospital mais próximo.</p>
             </div>
         </div>
-        <p>©2023 - Desenvolvido por <a href="https://www.linkedin.com/in/yohans-nascimento/" target="_blank">@Yohans.Dev</a></p>
+        <div class="creditos">
+            <p>©2023 - Desenvolvido por <a href="https://www.linkedin.com/in/yohans-nascimento/" target="_blank">@Yohans.Dev</a></p>
+        </div>
     </footer>
 </body>
 </html>
