Refactoring NavBar hover effect

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <nav>
         <ul class="nav-list">
-            <li><a href="#contatos">CONTATOS</a></li>
-            <li><a href="#como-funciona">COMO FUNCIONA</a></li>
-            <li><a href="#sobre">SOBRE MIM</a></li>
+            <li><a href="#contatos">Contatos</a></li>
+            <li><a href="#como-funciona">Como funciona</a></li>
+            <li><a href="#sobre">Sobre mim</a></li>
             <li><a href="#faq">FAQ</a></li>
         </ul>
     </nav>
