--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,500,1,0" />
     <title>Matheus Leite - Atendimento Psicológico Online</title>
 </head>
-<body>
+<body class="borda">
     <nav>
         <ul class="nav-list">
             <li><a href="#contatos">Contatos</a></li>
@@ -26,7 +26,9 @@
                 <p>Atendimento psicológico especializado do conforto de sua casa!</p>
                 <a href="#contatos"> <button>Marque uma consulta!</button> </a>
             </div>
-            <div class="hero-img"> <img src="/imgs/Hero_-_Images-removebg-preview (1).png" alt="Uma mulher sorri enquanto mexe no computador."> </div>
+            <div class="hero-img">
+                <img src="/imgs/Hero_-_Images-removebg-preview (1).png" alt="Uma mulher sorri enquanto mexe no computador.">
+            </div>
         </section>
 
         <section class="sobre" id="sobre">
@@ -75,9 +77,9 @@
             </div>
         </section>
         
-        <section class="feedback" id="feedback">
+        <section class="feedback borda" id="feedback">
             <h2>feedback</h2>
-            <div class="card-container">
+            <div class="card-container borda">
                 <div class="card">
                     <span class="material-symbols-outlined">person</span>
                     <h3 class="nome">Pessoa Fulana</h3>
@@ -173,7 +175,7 @@
         </section>
     </main>
     <footer>
-        <div class="footer-container">
+        <div class="footer-container borda">
             <div class="mapa">
                 <h4>Mapa do Site</h4>
                 <ul>
