--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
         </ul>
     </nav>
     <main>
-        <section class="hero-section" id="home">
+        <section class="hero-section borda" id="home">
             <div class="hero-text">
                 <h1> <span id="nome-titulo">Matheus Leite</span> <br> Atendimento Psicológico</h1>
                 <p>Atendimento psicológico especializado do conforto de sua casa!</p>
                 <a href="#contatos"> <button>Marque uma consulta!</button> </a>
             </div>
-            <div class="hero-img">
+            <div class="hero-img borda">
                 <img src="/imgs/Hero_-_Images-removebg-preview (1).png" alt="Uma mulher sorri enquanto mexe no computador.">
             </div>
         </section>
 
-        <section class="sobre" id="sobre">
+        <section class="sobre borda" id="sobre">
             <div class="sobre-img">  <img src="/imgs/MatheusLeiteProfile.jpg" alt="Descrição física de Matheus Leite: Homem, jovem, cabelo ondulado comprido até o pescoço, barba cheia, sorriso no rosto. Ele veste uma camisa de botão azul escura com a manga dobrada nos ante braços. Ele tem os braços cruzados em frente seu peito. Em seu braço direito é possível ver uma tatuagem de The Last of Us."> </div>
-            <div class="sobre-text"> 
+            <div class="sobre-text borda"> 
                 <h2>quem é matheus leite</h2> 
                 <p>Olá! Meu nome é <strong>Matheus Leite</strong>, tenho 25 anos e sou <strong>psicólogo clínico - CRP 11/19218 - graduado pela Universidade Federal do Ceará (UFC)</strong>. Ao longo da minha trajetória acadêmica, tive contato mais próximo com estudos e com atividades de extensão nos temas de: <strong>combate e prevenção ao suicídio</strong>, <strong>combate a diferentes formas de violências estruturais</strong>, <strong>desenvolvimento de relações interpessoais</strong>, <strong>promoção de saúde mental entre jovens das periferias de Fortaleza (CE)</strong>, entre outros. </p>
                 <p>No entanto, minhas áreas de estudo favoritas são sobre <strong>gênero e sexualidade</strong>, além da perspectiva de uma psicologia crítica e engajada com pautas sociais. Nesse sentido, ainda na faculdade, participei da condução de um podcast sobre diversos temas pautados pela Psicologia Social, e de um grupo de escuta a jovens LGBTQIAP+.</p>
@@ -42,22 +42,22 @@
             </div>
         </section>
 
-        <section class="como-funciona" id="como-funciona">
-            <div class="cf-text">
+        <section class="como-funciona borda" id="como-funciona">
+            <div class="cf-text borda">
                 <h2>como funciona</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet. Donec quis rutrum felis, sed interdum sem. Curabitur eu ante vitae augue tempor consectetur. Sed tristique congue metus. Vivamus ex est, porta sit amet leo sed, euismod faucibus risus. Vivamus ut risus at sem venenatis porta. Sed pharetraconsectetur luctus eu et turpis. Nam vehicula hendrerit justo eu accumsan.</p>
             </div>
-            <div class="cf-ilustracao">
+            <div class="cf-ilustracao borda">
                 <img src="/imgs/chatting.png" alt="Uma tela de uma telefone onde, dentro dela, duas pessoas conversam.">
             </div>
         </section>
 
-        <section class="topicos-trabalhados" id="topicos-trabalhados">
+        <section class="topicos-trabalhados borda" id="topicos-trabalhados">
             <div>
                 <h2>tópicos trabalhados</h2>
                 <p>É importante ressaltar que os mais diversos assuntos podem ser tratados na construção da relação de confiança e de <br>vínculo da terapia, desde os mais corriqueiros até a experiência particular com um psicodiagnóstico, por exemplo.</p>
                 <p><strong>Alguns dos tópicos que podem ser trabalhados na terapia: </strong></p>
-                <ul>
+                <ul class="borda">
                     <li>acompanhamento pessoal</li>
                     <li>ansiedade</li>
                     <li>conflitos amorosos</li>
@@ -80,7 +80,7 @@
         <section class="feedback borda" id="feedback">
             <h2>feedback</h2>
             <div class="card-container borda">
-                <div class="card">
+                <div class="card borda">
                     <span class="material-symbols-outlined">person</span>
                     <h3 class="nome">Pessoa Fulana</h3>
                     <p class="review">Aliquam et felis sit amet enim gravida semper. Etiam volutpat urna in rutrum lacinia. Suspendisse potenti.</p>
@@ -103,9 +103,9 @@
             </div>
         </section>
 
-        <section class="faq" id="faq">
+        <section class="faq borda" id="faq">
             <h2>perguntas frequentes</h2>
-            <div class="perguntas-container">
+            <div class="perguntas-container borda">
                 <details class="pergunta">
                     <summary class="texto-pergunta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet.</summary>
                     <p class="texto-resposta">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet. Donec quis rutrum felis, sed interdum sem. Curabitur eu ante vitae augue tempor consectetur. Sed tristique congue metus. Vivamus ex est, porta sit amet leo sed, euismod faucibus risus. Vivamus ut risus at sem venenatis porta. Sed pharetraconsectetur luctus eu et turpis. Nam vehicula hendrerit justo eu accumsan.</p>
@@ -125,19 +125,19 @@
             
         </section>
 
-        <section class="contatos" id="contatos">
+        <section class="contatos borda" id="contatos">
             <div>
                 <h2>entre em contato!</h2>
                 <p>Gostou do que viu? Gostaria de marcar uma consulta ou tirar alguma dúvida? <br> Me mande uma mensagem e responderei assim que possível!</p>
             </div>
 
-            <div class="caixa-flutuante">
+            <div class="caixa-flutuante borda">
 
-                <div class="lista-contatos">
+                <div class="lista-contatos borda">
                     <div class="ilustracao-correio">
                         <img src="/imgs/mailbox-illustration.png" alt="Ilustração de caixa de correio">
                     </div>
-                    <div class="contato" id="whatsapp">
+                    <div class="contato borda" id="whatsapp">
                         <div class="icon"><a href="https://api.whatsapp.com/message/OQKS7OBR34TCE1?autoload=1&app_absent=0" target="_blank"><img src="/imgs/whatsapp_icon.png" alt="Imagem da logo do Whatsapp."></a></div>
                         <p>Me chama no <a href="https://api.whatsapp.com/message/OQKS7OBR34TCE1?autoload=1&app_absent=0" target="_blank">Whatsapp! (85) 99901-6122 </a></p>
                     </div>
@@ -176,7 +176,7 @@
     </main>
     <footer>
         <div class="footer-container borda">
-            <div class="mapa">
+            <div class="mapa borda">
                 <h4>Mapa do Site</h4>
                 <ul>
                     <li><a href="#home">Home</a></li>
@@ -188,7 +188,7 @@
                     <li><a href="#contatos">Contatos</a></li>
                 </ul>
             </div>
-            <div class="links">
+            <div class="links borda">
                 <h4>Meios de Contato</h4>
                 <ul>
                     <li>Telefone: (85) 9 9901-6122</li>
@@ -196,7 +196,7 @@
                     <li>E-Mail: matheuslb.psi@gmail.com</li>
                 </ul>
             </div>
-            <div class="aviso">
+            <div class="aviso borda">
                 <h4>ATENÇÃO:</h4>
                 <p>Este site não oferece tratamento ou aconselhamento imediato para pessoas em crise suicida.<br> Em caso de crise, ligue para 188 (CVV) ou acesse o site <a href="https://www.cvv.org.br" target="_blank">www.cvv.org.br</a>. <br>Em caso de emergência, procure atendimento em um hospital mais próximo.</p>
             </div>
