Fixing elements width

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </nav>
     <main>
         <section class="hero-section borda" id="home">
-            <div class="hero-text">
+            <div class="hero-text borda">
                 <h1> <span id="nome-titulo">Matheus Leite</span> <br> Atendimento Psicológico</h1>
                 <p>Atendimento psicológico especializado do conforto de sua casa!</p>
                 <a href="#contatos"> <button>Marque uma consulta!</button> </a>
@@ -32,14 +32,21 @@
         </section>
 
         <section class="sobre borda" id="sobre">
-            <div class="sobre-img">  <img src="/imgs/MatheusLeiteProfile.jpg" alt="Descrição física de Matheus Leite: Homem, jovem, cabelo ondulado comprido até o pescoço, barba cheia, sorriso no rosto. Ele veste uma camisa de botão azul escura com a manga dobrada nos ante braços. Ele tem os braços cruzados em frente seu peito. Em seu braço direito é possível ver uma tatuagem de The Last of Us."> </div>
-            <div class="sobre-text borda"> 
-                <h2>quem é matheus leite</h2> 
-                <p>Olá! Meu nome é <strong>Matheus Leite</strong>, tenho 25 anos e sou <strong>psicólogo clínico - CRP 11/19218 - graduado pela Universidade Federal do Ceará (UFC)</strong>. Ao longo da minha trajetória acadêmica, tive contato mais próximo com estudos e com atividades de extensão nos temas de: <strong>combate e prevenção ao suicídio</strong>, <strong>combate a diferentes formas de violências estruturais</strong>, <strong>desenvolvimento de relações interpessoais</strong>, <strong>promoção de saúde mental entre jovens das periferias de Fortaleza (CE)</strong>, entre outros. </p>
-                <p>No entanto, minhas áreas de estudo favoritas são sobre <strong>gênero e sexualidade</strong>, além da perspectiva de uma psicologia crítica e engajada com pautas sociais. Nesse sentido, ainda na faculdade, participei da condução de um podcast sobre diversos temas pautados pela Psicologia Social, e de um grupo de escuta a jovens LGBTQIAP+.</p>
-                <p>Além disso, possuo experiência de um ano e meio como estagiário em atendimentos clínicos, tanto em plantão psicológico quanto na modalidade de psicoterapia de longo prazo, e um ano de atendimentos já como profissional formado. </p>
-                <p><strong>Acredito numa clínica baseada no desenvolvimento de uma relação empática e de aceitação incondicional entre terapeuta e cliente</strong>, o que vem da <strong>Abordagem Centrada na Pessoa</strong> que utilizo na prática terapêutica, assim como valorizo a promoção dos Direitos Humanos e da saúde mental com atenção aos recortes de gênero, raça e sexualidade.</p> 
+            <div class="sobre-itens borda">
+                <div class="frame">
+                    <div class="sobre-img borda">
+                        <img src="/imgs/MatheusLeiteProfile.jpg" alt="Descrição física de Matheus Leite: Homem, jovem, cabelo ondulado comprido até o pescoço, barba cheia, sorriso no rosto. Ele veste uma camisa de botão azul escura com a manga dobrada nos ante braços. Ele tem os braços cruzados em frente seu peito. Em seu braço direito é possível ver uma tatuagem de The Last of Us."> 
+                    </div>
+                </div>
+                    <div class="sobre-text borda"> 
+                    <h2>quem é matheus leite</h2> 
+                    <p>Olá! Meu nome é <strong>Matheus Leite</strong>, tenho 25 anos e sou <strong>psicólogo clínico - CRP 11/19218 - graduado pela Universidade Federal do Ceará (UFC)</strong>. Ao longo da minha trajetória acadêmica, tive contato mais próximo com estudos e com atividades de extensão nos temas de: <strong>combate e prevenção ao suicídio</strong>, <strong>combate a diferentes formas de violências estruturais</strong>, <strong>desenvolvimento de relações interpessoais</strong>, <strong>promoção de saúde mental entre jovens das periferias de Fortaleza (CE)</strong>, entre outros. </p>
+                    <p>No entanto, minhas áreas de estudo favoritas são sobre <strong>gênero e sexualidade</strong>, além da perspectiva de uma psicologia crítica e engajada com pautas sociais. Nesse sentido, ainda na faculdade, participei da condução de um podcast sobre diversos temas pautados pela Psicologia Social, e de um grupo de escuta a jovens LGBTQIAP+.</p>
+                    <p>Além disso, possuo experiência de um ano e meio como estagiário em atendimentos clínicos, tanto em plantão psicológico quanto na modalidade de psicoterapia de longo prazo, e um ano de atendimentos já como profissional formado. </p>
+                    <p><strong>Acredito numa clínica baseada no desenvolvimento de uma relação empática e de aceitação incondicional entre terapeuta e cliente</strong>, o que vem da <strong>Abordagem Centrada na Pessoa</strong> que utilizo na prática terapêutica, assim como valorizo a promoção dos Direitos Humanos e da saúde mental com atenção aos recortes de gênero, raça e sexualidade.</p> 
+                </div>
             </div>
+            
         </section>
 
         <section class="como-funciona borda" id="como-funciona">
@@ -53,28 +60,26 @@
         </section>
 
         <section class="topicos-trabalhados borda" id="topicos-trabalhados">
-            <div>
-                <h2>tópicos trabalhados</h2>
-                <p>É importante ressaltar que os mais diversos assuntos podem ser tratados na construção da relação de confiança e de <br>vínculo da terapia, desde os mais corriqueiros até a experiência particular com um psicodiagnóstico, por exemplo.</p>
-                <p><strong>Alguns dos tópicos que podem ser trabalhados na terapia: </strong></p>
-                <ul class="borda">
-                    <li>acompanhamento pessoal</li>
-                    <li>ansiedade</li>
-                    <li>conflitos amorosos</li>
-                    <li>conflitos familiares</li>
-                    <li>depressão</li>
-                    <li>relacionamento afetivos</li>
-                    <li>desenvolvimento pessoal</li>
-                    <li>estresse</li>
-                    <li>morte e luto</li>
-                    <li>parentalidade</li>
-                    <li>saúde mental</li>
-                    <li>suicídio</li>
-                    <li>isolamento social</li>
-                    <li>sexualidade</li>
-                    <li>identidade de gênero</li>
-                </ul>
-            </div>
+            <h2>tópicos trabalhados</h2>
+            <p>É importante ressaltar que os mais diversos assuntos podem ser tratados na construção da relação de confiança e de <br>vínculo da terapia, desde os mais corriqueiros até a experiência particular com um psicodiagnóstico, por exemplo.</p>
+            <p><strong>Alguns dos tópicos que podem ser trabalhados na terapia: </strong></p>
+            <ul class="borda">
+                <li>acompanhamento pessoal</li>
+                <li>ansiedade</li>
+                <li>conflitos amorosos</li>
+                <li>conflitos familiares</li>
+                <li>depressão</li>
+                <li>relacionamento afetivos</li>
+                <li>desenvolvimento pessoal</li>
+                <li>estresse</li>
+                <li>morte e luto</li>
+                <li>parentalidade</li>
+                <li>saúde mental</li>
+                <li>suicídio</li>
+                <li>isolamento social</li>
+                <li>sexualidade</li>
+                <li>identidade de gênero</li>
+            </ul>
         </section>
         
         <section class="feedback borda" id="feedback">
