Addind texts and fixing feedback cards

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 </div>
                     <div class="sobre-text"> 
                         <h2>quem é matheus leite</h2> 
-                        <p>Olá! Meu nome é <strong>Matheus Leite</strong>, tenho 25 anos e sou <strong>psicólogo clínico - CRP 11/19218 - graduado pela Universidade Federal do Ceará (UFC)</strong>. Ao longo da minha trajetória acadêmica, tive contato mais próximo com estudos e com atividades de extensão nos temas de: <strong>combate e prevenção ao suicídio</strong>, <strong>combate a diferentes formas de violências estruturais</strong>, <strong>desenvolvimento de relações interpessoais</strong>, <strong>promoção de saúde mental entre jovens das periferias de Fortaleza (CE)</strong>, entre outros. </p>
-                        <p>No entanto, minhas áreas de estudo favoritas são sobre <strong>gênero e sexualidade</strong>, além da perspectiva de uma psicologia crítica e engajada com pautas sociais. Nesse sentido, ainda na faculdade, participei da condução de um podcast sobre diversos temas pautados pela Psicologia Social, e de um grupo de escuta a jovens LGBTQIAP+.</p>
+                        <p>Olá! Meu nome é <strong>Matheus Leite</strong>, tenho 25 anos e sou <strong>psicólogo clínico - CRP 11/19218</strong> - graduado pela Universidade Federal do Ceará (UFC). Ao longo da minha trajetória acadêmica, tive contato mais próximo com estudos e com atividades de extensão nos temas de: combate e prevenção ao suicídio, combate a diferentes formas de violências estruturais, desenvolvimento de relações interpessoais, promoção de saúde mental entre jovens das periferias de Fortaleza (CE), entre outros. </p>
+                        <p>No entanto, minhas áreas de estudo favoritas são sobre gênero e sexualidade, além da perspectiva de uma psicologia crítica e engajada com pautas sociais. Nesse sentido, ainda na faculdade, participei da condução de um podcast sobre diversos temas pautados pela Psicologia Social, e de um grupo de escuta a jovens LGBTQIAP+.</p>
                         <p>Além disso, possuo experiência de um ano e meio como estagiário em atendimentos clínicos, tanto em plantão psicológico quanto na modalidade de psicoterapia de longo prazo, e um ano de atendimentos já como profissional formado. </p>
-                        <p><strong>Acredito numa clínica baseada no desenvolvimento de uma relação empática e de aceitação incondicional entre terapeuta e cliente</strong>, o que vem da <strong>Abordagem Centrada na Pessoa</strong> que utilizo na prática terapêutica, assim como valorizo a promoção dos Direitos Humanos e da saúde mental com atenção aos recortes de gênero, raça e sexualidade.</p> 
+                        <p>Acredito numa clínica baseada no desenvolvimento de uma relação empática e de aceitação incondicional entre terapeuta e cliente, o que vem da Abordagem Centrada na Pessoa que utilizo na prática terapêutica, assim como valorizo a promoção dos Direitos Humanos e da saúde mental com atenção aos recortes de gênero, raça e sexualidade.</p> 
                     </div>        
                 </div>
             </div>
@@ -53,7 +53,8 @@
         <section class="como-funciona" id="como-funciona">
             <div class="cf-text">
                 <h2>como funciona</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sagittis erat in diam porttitor, at imperdiet risus laoreet. Donec quis rutrum felis, sed interdum sem. Curabitur eu ante vitae augue tempor consectetur. Sed tristique congue metus. Vivamus ex est, porta sit amet leo sed, euismod faucibus risus. Vivamus ut risus at sem venenatis porta. Sed pharetraconsectetur luctus eu et turpis. Nam vehicula hendrerit justo eu accumsan.</p>
+                <p>Para as sessões, vamos precisar nos comunicar por áudio e vídeo, então é essencial que você esteja em um ambiente de casa resguardado, onde se sinta confortável para falar livremente. Ao longo delas, vamos construir uma relação baseada na aceitação um com o outro, no sentido de estabelecermos um espaço no qual você se sinta, cada vez mais, confortável e confiante para abordar suas mais variadas questões. O foco é em você, na forma como lida com determinados problemas, na forma como eles impactam na sua vivência, importante e única.</p>
+                <p>Os atendimentos têm duração de 50 minutos cada. Cada sessão tem um valor de RS 100,00, se pagas de forma avulsa. Também existe a opção de pacote mensal com 4 sessões que dá direito a 10% de desconto (RS 360,00). O pagamento é feito no inicio do mês e já garante nossos 4 encontros daquele período.</p>
             </div>
             <div class="cf-ilustracao">
                 <img src="/imgs/chatting.png" alt="Uma tela de uma telefone onde, dentro dela, duas pessoas conversam.">
@@ -88,19 +89,22 @@
             <div class="card-container">
                 <div class="card">
                     <span class="material-symbols-outlined">person</span>
-                    <h3 class="nome">Pessoa Fulana</h3>
-                    <p class="review">Aliquam et felis sit amet enim gravida semper. Etiam volutpat urna in rutrum lacinia. Suspendisse potenti.</p>
+                    <h3 class="nome">Iniciais do paciente: V.R.R.</h3>
+                    <p class="review">Psicólogo muito atencioso. Ótima primeira consulta.</p>
                 </div>
+
+                <div class="card">
+                    <span class="material-symbols-outlined">person</span>
+                    <h3 class="nome">Iniciais do paciente: C.A.R.</h3>
+                    <p class="review">Por ser trans e autista sempre me preocupo se profissionais de saúde e áreas relacionadas vão me atender minimamente bem e com o Matheus desde o início a experiência tem sido muito boa. Para além de me respeitar, ele também faz um atendimento qualificado, e isso faz toda diferença! Passa bastante confiança também.</p>
+                </div>
+
                 <div class="card">
                     <span class="material-symbols-outlined">person</span>
                     <h3 class="nome">Pessoa Fulana</h3>
                     <p class="review">Aliquam et felis sit amet enim gravida semper. Etiam volutpat urna in rutrum lacinia. Suspendisse potenti.</p>
                 </div>
-                <div class="card">
-                    <span class="material-symbols-outlined">person</span>
-                    <h3 class="nome">Pessoa Fulana</h3>
-                    <p class="review">Aliquam et felis sit amet enim gravida semper. Etiam volutpat urna in rutrum lacinia. Suspendisse potenti.</p>
-                </div>
+                
                 <div class="card">
                     <span class="material-symbols-outlined">person</span>
                     <h3 class="nome">Pessoa Fulana</h3>
