--- a/Pages/index.html
+++ b/Pages/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/imgs/ML_Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/mobile.css">
+    <link rel="stylesheet" href="/css/responsive.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,500,1,0" />
     <title>Matheus Leite - Atendimento Psicológico Online</title>
 </head>
@@ -44,6 +44,7 @@
                         <p>No entanto, minhas áreas de estudo favoritas são sobre gênero e sexualidade, além da perspectiva de uma psicologia crítica e engajada com pautas sociais. Nesse sentido, ainda na faculdade, participei da condução de um podcast sobre diversos temas pautados pela Psicologia Social, e de um grupo de escuta a jovens LGBTQIAP+.</p>
                         <p>Além disso, possuo experiência de um ano e meio como estagiário em atendimentos clínicos, tanto em plantão psicológico quanto na modalidade de psicoterapia de longo prazo, e um ano de atendimentos já como profissional formado. </p>
                         <p>Acredito numa clínica baseada no desenvolvimento de uma relação empática e de aceitação incondicional entre terapeuta e cliente, o que vem da Abordagem Centrada na Pessoa que utilizo na prática terapêutica, assim como valorizo a promoção dos Direitos Humanos e da saúde mental com atenção aos recortes de gênero, raça e sexualidade.</p> 
+                        <p><strong>Para saber sobre minha formação acesse: </strong><a href="" target="_blank"><strong>Minha Formação Acadêmica e especializações</strong></a>.</p>
                     </div>        
                 </div>
             </div>
@@ -164,21 +165,21 @@
                 <div class="form-email">
                     <h3>Me envie um E-mail!</h3>
                     <form action="https://formsubmit.co/yohans.dev@gmail.com" method="POST" id="formulario-mensagem">
-                        <input type="hidden" name="_subject" value="Nova mensagem!">
+                        <input type="hidden" name="_subject" value="Nova mensagem de possível cliente!">
                         <input type="hidden" name="_captcha" value="false">
                         <label for="nome">Nome</label>
                         <br>
-                        <input type="text" name="nome" placeholder="Seu nome aqui..." required>
+                        <input type="text" name="Nome" placeholder="Seu nome aqui..." required>
                         <br>
                         <label for="email">E-mail</label>
                         <br>
-                        <input type="email" name="email" placeholder="Seu e-mail aqui..." required>
+                        <input type="email" name="E-mail" placeholder="Seu e-mail aqui..." required>
                         <br>
                         <label for="mensagem">Mensagem</label>
                         <br>
-                        <textarea type="text" name="mensagem" form="formulario-mensagem" placeholder="Escreva sua mensagem aqui..." required rows="10" cols="50" minlength="1" maxlength="1800"></textarea>
+                        <textarea type="text" name="Mensagem" form="formulario-mensagem" placeholder="Escreva sua mensagem aqui..." required rows="10" cols="50" minlength="1" maxlength="1800"></textarea>
                         <button type="submit">Enviar</button>
-                        <!--<input type="hidden" name="_next" value="https://yourdomain.co/thanks.html"> -->
+                        <input type="hidden" name="_next" value="http://127.0.0.1:5500/Pages/obrigado.html">
                     </form>
                 </div>
             </div>
