Changing hero image

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -27,7 +27,7 @@
                 <a href="#contatos"> <button>Marque uma consulta!</button> </a>
             </div>
             <div class="hero-img">
-                <img src="/imgs/Hero_-_Images-removebg-preview (1).png" alt="Uma mulher sorri enquanto mexe no computador.">
+                <img src="/imgs/hero-img.png" alt="A imagem de uma mesa com um notebook ao lado de uma caneca branca sobre um porta copos e um caderno com um lápis em cima.">
             </div>
         </section>
 
@@ -55,7 +55,7 @@
             <div class="cf-text">
                 <h2>como funciona</h2>
                 <p>Para as sessões, vamos precisar nos comunicar por áudio e vídeo, então é essencial que você esteja em um ambiente de casa resguardado, onde se sinta confortável para falar livremente. Ao longo delas, vamos construir uma relação baseada na aceitação um com o outro, no sentido de estabelecermos um espaço no qual você se sinta, cada vez mais, confortável e confiante para abordar suas mais variadas questões. O foco é em você, na forma como lida com determinados problemas, na forma como eles impactam na sua vivência, importante e única.</p>
-                <p>Os atendimentos têm duração de 50 minutos cada. Cada sessão tem um valor de RS 100,00, se pagas de forma avulsa. Também existe a opção de pacote mensal com 4 sessões que dá direito a 10% de desconto (RS 360,00). O pagamento é feito no inicio do mês e já garante nossos 4 encontros daquele período.</p>
+                <p>Os atendimentos têm duração de 50 minutos cada. Cada sessão tem um valor de R$ 100,00, se pagas de forma avulsa. Também existe a opção de pacote mensal com 4 sessões que dá direito a 10% de desconto (R$ 360,00). O pagamento é feito no inicio do mês e já garante nossos 4 encontros daquele período.</p>
             </div>
             <div class="cf-ilustracao">
                 <img src="/imgs/chatting.png" alt="Uma tela de uma telefone onde, dentro dela, duas pessoas conversam.">
