changing thanks page link

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                         <br>
                         <textarea type="text" name="Mensagem" form="formulario-mensagem" placeholder="Escreva sua mensagem aqui..." required rows="10" cols="50" minlength="1" maxlength="1800"></textarea>
                         <button type="submit">Enviar</button>
-                        <input type="hidden" name="_next" value="http://127.0.0.1:5500/Pages/obrigado.html">
+                        <input type="hidden" name="_next" value="obrigado.html">
                     </form>
                 </div>
             </div>
