--- a/obrigado.html
+++ b/obrigado.html
@@ -15,7 +15,7 @@
         <p class="mensagem">Sua mensagem foi enviada com sucesso!</p>
     </div>    
     <div class="voltar">
-        <p class="link"><a href="http://127.0.0.1:5500/Pages/index.html">VOLTAR PARA À PÁGINA PRINCIPAL</a></p>
+        <p class="link"><a href="https://main--matheus-leite-psi.netlify.app">VOLTAR PARA À PÁGINA PRINCIPAL</a></p>
     </div>
 </body>
 </html>
