--- a/index.html
+++ b/index.html
@@ -35,16 +35,15 @@
             <div class="sobre-itens">
                 <div class="frame">
                     <div class="sobre-img">
-                        <img src="/imgs/MatheusLeiteProfile.jpg" alt="Descrição física de Matheus Leite: Homem, jovem, cabelo ondulado comprido até o pescoço, barba cheia, sorriso no rosto. Ele veste uma camisa de botão azul escura com a manga dobrada nos ante braços. Ele tem os braços cruzados em frente seu peito. Em seu braço direito é possível ver uma tatuagem de The Last of Us."> 
+                        <img src="/imgs/MatheusLeite-Profile.jpg" alt="Descrição física de Matheus Leite: Homem, jovem, cabelo ondulado comprido até o pescoço, barba cheia, sorriso no rosto. Ele veste uma camisa de botão azul escura com a manga dobrada nos ante braços. Ele tem os braços cruzados em frente seu peito. Em seu braço direito é possível ver uma tatuagem de The Last of Us."> 
                     </div>
                 </div>
                     <div class="sobre-text"> 
-                        <h2>quem é matheus leite</h2> 
+                        <h2>sobre mim</h2>
                         <p>Olá! Meu nome é <strong>Matheus Leite</strong>, tenho 25 anos e sou <strong>psicólogo clínico - CRP 11/19218</strong> - graduado pela Universidade Federal do Ceará (UFC). Ao longo da minha trajetória acadêmica, tive contato mais próximo com estudos e com atividades de extensão nos temas de: combate e prevenção ao suicídio, combate a diferentes formas de violências estruturais, desenvolvimento de relações interpessoais, promoção de saúde mental entre jovens das periferias de Fortaleza (CE), entre outros. </p>
                         <p>No entanto, minhas áreas de estudo favoritas são sobre gênero e sexualidade, além da perspectiva de uma psicologia crítica e engajada com pautas sociais. Nesse sentido, ainda na faculdade, participei da condução de um podcast sobre diversos temas pautados pela Psicologia Social, e de um grupo de escuta a jovens LGBTQIAP+.</p>
-                        <p>Além disso, possuo experiência de um ano e meio como estagiário em atendimentos clínicos, tanto em plantão psicológico quanto na modalidade de psicoterapia de longo prazo, e um ano de atendimentos já como profissional formado. </p>
                         <p>Acredito numa clínica baseada no desenvolvimento de uma relação empática e de aceitação incondicional entre terapeuta e cliente, o que vem da Abordagem Centrada na Pessoa que utilizo na prática terapêutica, assim como valorizo a promoção dos Direitos Humanos e da saúde mental com atenção aos recortes de gênero, raça e sexualidade.</p> 
-                        <p><strong>Para saber sobre minha formação acesse: </strong><a href="" target="_blank"><strong>Minha Formação Acadêmica e especializações</strong></a>.</p>
+                        <p><strong>Para saber mais sobre minha formação acesse: </strong><a href="" target="_blank"><strong>Minha Formação Acadêmica e especializações</strong></a>.</p>
                     </div>        
                 </div>
             </div>
@@ -86,7 +85,7 @@
         </section>
         
         <section class="feedback" id="feedback">
-            <h2>feedback</h2>
+            <h2>feedbacks de pacientes</h2>
             <div class="card-container">
                 <div class="card">
                     <span class="material-symbols-outlined">person</span>
